chore: Update .gitignore to exclude development tools
- Add AI assistant directories (.claude, .cursor, .aider)
- Add Serena MCP directory (.serena)
- Add backup file patterns
- Remove tracked .serena files from repository

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,16 @@
 .cxx
 local.properties
 /output
+
+# Claude Code / AI Assistant
+.claude/
+.cursor/
+.aider*
+
+# Serena MCP
+.serena/
+
+# Backup files
+*.backup
+*.bak
+*~
